force-app/main/default/objects/Opportunity/fields/Invoice_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Text__c</fullName>
    <description>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</description>
    <formula>&apos;$&apos; &amp;( 
IF(Invoice_Amount__c &lt; 0, &quot;-&quot;, &quot;&quot;) &amp; 
IF(ABS(Invoice_Amount__c) &gt;= 1000000, TEXT(FLOOR(ABS(Invoice_Amount__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Invoice_Amount__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Invoice_Amount__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Invoice_Amount__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Invoice_Amount__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Invoice_Amount__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Invoice_Amount__c) , 1), 2) * 100, 99))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</inlineHelpText>
    <label>zPandadoc - Invoice - Amount - Text</label>
    <type>Text</type>
</CustomField>