force-app/main/default/objects/Opportunity/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date that will be set as the invoice date in Quickbooks
This is a lookup field to the &apos;Close Date&apos; field</description>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>