force-app/main/default/objects/Opportunity/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <description>Due date on the invoice that will be passed to Quickbooks
This equals &apos;Invoice Date&apos; field + &apos;Payment Terms&apos; Field
Can be updated as needed. Update this from Salesforce; not Quickbooks, as it will be pushed to Quickbooks via Breadwinner</description>
    <inlineHelpText>Due date on the invoice that will be passed to Quickbooks
This equals &apos;Invoice Date&apos; field + &apos;Payment Terms&apos; Field
Can be updated as needed. Update this from Salesforce; not Quickbooks, as it will be pushed to Quickbooks via Breadwinner</inlineHelpText>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>