force-app/main/default/objects/Opportunity/fields/Invoice_Due_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date_Override__c</fullName>
    <description>This value should be filled in if you don&apos;t want automated logic to set the due date on the invoice and wish to set it manually.</description>
    <inlineHelpText>This value should be filled in if you don&apos;t want automated logic to set the due date on the invoice and wish to set it manually.</inlineHelpText>
    <label>Invoice Due Date Override</label>
    <type>Date</type>
</CustomField>