force-app/main/default/objects/Opportunity/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>This is an Invoice Number which is automatically created by Salesforce and delivered to Quickbooks via Workato, our Middleware. It&apos;s important for bookkeeping purposes as the Invoice Numbers in Salesforce must be identical to the Invoice Numbers in Quickbooks</description>
    <displayFormat>{0000}</displayFormat>
    <label>Invoice #</label>
    <type>AutoNumber</type>
</CustomField>