force-app/main/default/objects/Opportunity/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field used to determine if an Opportunity is new (only for Opportunities created after 2/7/2022) to trigger a flow.</description>
    <label>Is New?</label>
    <type>Checkbox</type>
</CustomField>