force-app/main/default/objects/Opportunity/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>zMisc - Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>