force-app/main/default/objects/Opportunity/fields/Last_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Last_Estimate__c</fullName>
    <label>Last Estimate</label>
    <type>Url</type>
</CustomField>