force-app/main/default/objects/Opportunity/fields/Last_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice__c</fullName>
    <label>Last Invoice</label>
    <type>Url</type>
</CustomField>