force-app/main/default/objects/Opportunity/fields/Last_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Last_Proposal__c</fullName>
    <label>Last Proposal</label>
    <type>Url</type>
</CustomField>