force-app/main/default/objects/Opportunity/fields/Lead_Producer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Producer__c</fullName>
    <description>This is a Single Picklist Field to enter the Lead Producer for each Opportunity
This field is important for Reporting Dashboards for Employee Performance and also allows Lead Producers to sort the Opportunity Pipeline Views to show only their assigned Projects.</description>
    <inlineHelpText>This is a Single Picklist Field to enter the Lead Producer for each Opportunity
This field is important for Reporting Dashboards for Employee Performance and also allows Lead Producers to sort the Opportunity Pipeline Views to show only their assigned Projects.</inlineHelpText>
    <label>Lead Producer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Heather Cullum</fullName>
                <default>true</default>
                <label>Heather Cullum</label>
            </value>
            <value>
                <fullName>Ferhat Yurdam</fullName>
            </value>
            <value>
                <fullName>Cameron Krone</fullName>
            </value>
            <value>
                <fullName>Regina Bakeeva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>