force-app/main/default/objects/Opportunity/fields/Lead_Producer_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Producer_Email__c</fullName>
    <description>This is a Lookup Field to the Lead Producer Field which auto populates based on the Lead Producer assigned
This field is important for Round Robin automations as the Round Robin emails from the Email Address of the Lead Producer on the Opportunity; not on the Creator of the Opportunity</description>
    <inlineHelpText>This is a Lookup Field to the Lead Producer Field which auto populates based on the Lead Producer assigned
This field is important for Round Robin automations as the Round Robin emails from the Email Address of the Lead Producer on the Opportunity; not on the Creator of the Opportunity</inlineHelpText>
    <label>Lead Producer Email</label>
    <type>Email</type>
</CustomField>