force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Svc Type (Required) – Must be entered when creating an Opp.
Syncs with Auto Quote Builder to generate quotes based on Svc Type.</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Content</fullName>
                <label>Slate - Brand Content</label>
            </value>
            <value>
                <fullName>Slate - CGI</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
                <default>true</default>
                <label>Slate - eCom</label>
            </value>
            <value>
                <fullName>Motion</fullName>
                <label>Slate - Motion</label>
            </value>
            <value>
                <fullName>Retouching</fullName>
                <label>Slate - Retouch</label>
            </value>
            <value>
                <fullName>Studio Rental</fullName>
                <label>Slate - Studio &amp; Eq</label>
            </value>
            <value>
                <fullName>Retouching - Align</fullName>
                <label>Align - Retouch</label>
            </value>
            <value>
                <fullName>Palermo - Branding</fullName>
            </value>
            <value>
                <fullName>Palermo - Video Production</fullName>
                <label>Palermo - Content</label>
            </value>
            <value>
                <fullName>Casablanca - Motion Post Production</fullName>
                <isActive>false</isActive>
                <label>Casablanca - Motion Post Production</label>
            </value>
            <value>
                <fullName>Casablanca - Motion Production</fullName>
                <isActive>false</isActive>
                <label>Casablanca - Motion Production</label>
            </value>
            <value>
                <fullName>Palermo - Photo Production</fullName>
                <isActive>false</isActive>
                <label>Palermo - Photo Production</label>
            </value>
            <value>
                <fullName>Origins</fullName>
                <isActive>false</isActive>
                <label>Retouching - Origins</label>
            </value>
            <value>
                <fullName>Social Content</fullName>
                <isActive>false</isActive>
                <label>Social Content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>