force-app/main/default/objects/Opportunity/fields/List_Amount__c.field-meta.xml
<CustomField>
    <fullName>List_Amount__c</fullName>
    <description>This is the List Customer Amount excluding all Discounts. Think of this as our Retail Price.
This is show on Individual Quote Lines as a column and shown to clients on all Estimates/Invoices alongside any applied Discounts to showcase our Standard Pricing</description>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__ListAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the List Customer Amount excluding all Discounts. Think of this as our Retail Price.
This is show on Individual Quote Lines as a column and shown to clients on all Estimates/Invoices alongside any applied Discounts to showcase our Standard Pricing</inlineHelpText>
    <label>Customer List Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>