force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Required Field for Tracking Reason for Opp Loss + is input by Producer on Opp. 
When we lose Opp, determine Loss Cause to improve Win Rate %</description>
    <inlineHelpText>Required Field for Tracking Reason for Opp Loss + is input by Producer on Opp. 
When we lose Opp, determine Loss Cause to improve Win Rate %</inlineHelpText>
    <label>zOpportunity Loss - Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Turned Away</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Chose Different Studio</fullName>
            </value>
            <value>
                <fullName>Chose Different Agency</fullName>
            </value>
            <value>
                <fullName>Pushed Back</fullName>
            </value>
            <value>
                <fullName>Seeking Information</fullName>
            </value>
            <value>
                <fullName>Double Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>