force-app/main/default/objects/Opportunity/fields/Loss_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Notes__c</fullName>
    <label>zOpportunity Loss - Reason - Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>