force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Formula Field calculating Total Opp Mgn from Primary Quote.
Mgn % is the key KPI, more relevant than Mgn $.</description>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>