force-app/main/default/objects/Opportunity/fields/Margin_Historic__c.field-meta.xml
<CustomField>
    <fullName>Margin_Historic__c</fullName>
    <formula>True_Margin__c /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zMargin - %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>