force-app/main/default/objects/Opportunity/fields/Margin_Sheet_link__c.field-meta.xml
<CustomField>
    <fullName>Margin_Sheet_link__c</fullName>
    <description>Links to Margin Sheets in Google Sheets, used from 2015-20 to function as previous Quote method. 
Replaced by Quotes when implemented SF in 2020</description>
    <inlineHelpText>Links to Margin Sheets in Google Sheets, used from 2015-20 to function as previous Quote method. 
Replaced by Quotes when implemented SF in 2020</inlineHelpText>
    <label>zMargin - Sheet</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>