force-app/main/default/objects/Opportunity/fields/Marked_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Marked_Won_Date__c</fullName>
    <description>Date Opportunity First Marked &quot;Won&quot; – Auto-filled by Flow.
🚫 Do NOT manually enter.</description>
    <inlineHelpText>Date Opportunity First Marked &quot;Won&quot; – Auto-filled by Flow.
🚫 Do NOT manually enter.</inlineHelpText>
    <label>Opp Won Date</label>
    <type>Date</type>
</CustomField>