force-app/main/default/objects/Opportunity/fields/Motion__c.field-meta.xml
<CustomField>
    <fullName>Motion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zService Type - Motion</label>
    <type>Checkbox</type>
</CustomField>