force-app/main/default/objects/Opportunity/fields/Note_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Note_Accounting__c</fullName>
    <description>This is a Field to enter all Notes related to the Accounting of the Opportunity.
Best Practice moving forward will be using the &apos;Notes&apos; module and creating a New Note.
Notes in the Notes module can be organized by date created, can contain relevant Titles, can be Shared + added to Records.</description>
    <inlineHelpText>This is a Field to enter all Notes related to the Accounting of the Opportunity.
Best Practice moving forward will be using the &apos;Notes&apos; module and creating a New Note.
Notes in the Notes module can be organized by date created, can contain relevant Titles, can be Shared + added to Records.</inlineHelpText>
    <label>zNote - Accounting</label>
    <length>7800</length>
    <type>LongTextArea</type>
</CustomField>