force-app/main/default/objects/Opportunity/fields/Note_Motion_Production__c.field-meta.xml
<CustomField>
    <fullName>Note_Motion_Production__c</fullName>
    <description>This is a Field to enter all Notes related to Motion Production of the Opportunity.
Best Practice moving forward will be using the &apos;Notes&apos; module and creating a New Note.
Notes in the Notes module can be organized by date created, can contain relevant Titles, can be Shared + added to Records.</description>
    <inlineHelpText>This is a Field to enter all Notes related to Motion Production of the Opportunity.
Best Practice moving forward will be using the &apos;Notes&apos; module and creating a New Note.
Notes in the Notes module can be organized by date created, can contain relevant Titles, can be Shared + added to Records.</inlineHelpText>
    <label>zNote - Motion Production</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>