force-app/main/default/objects/Opportunity/fields/Notes_Photo_Production__c.field-meta.xml
<CustomField>
    <fullName>Notes_Photo_Production__c</fullName>
    <description>Field to enter all Notes related to Photo Production of Opp
Use &apos;Notes&apos; module and creating New Note.
Notes in Notes module organized by date created, can contain relevant Titles, can be Shared + added to Records.</description>
    <inlineHelpText>Field to enter all Notes related to Photo Production of Opp
Use &apos;Notes&apos; module and creating New Note.
Notes in Notes module organized by date created, can contain relevant Titles, can be Shared + added to Records.</inlineHelpText>
    <label>zNote - Photo Production</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>