force-app/main/default/objects/Opportunity/fields/Opportunity_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Descriptor__c</fullName>
    <description>This is an Additional Description of the Opportunity.
The Opportunity Name has a Standard 30 Character Limit due to Quickbooks Charactor Limitations
Because of this, additional information beyond the Initial Lead Date, Account Name, and Service Type should be entered here.

For Example: Fall/Winter Collection</description>
    <inlineHelpText>This is an Additional Description of the Opportunity.
The Opportunity Name has a Standard 30 Character Limit due to Quickbooks Charactor Limitations
Because of this, additional information beyond the Initial Lead Date, Account Name, and Service Type should be entered here.

For Example: Fall/Winter Collection</inlineHelpText>
    <label>Opportunity Descriptor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>