force-app/main/default/objects/Opportunity/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>zTypeform - Pain Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>