force-app/main/default/objects/Opportunity/fields/Pandadoc_Quote_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_Quote_Template_Id__c</fullName>
    <formula>/**IF(
    CONTAINS(LOWER(TEXT(Lead_Type__c)), &quot;slate&quot;),
    &quot;MK9TxsLF7UNJFPEYdP6dNg&quot;,
    IF(
        CONTAINS(LOWER(TEXT(Lead_Type__c)), &quot;palermo&quot;),
        &quot;8gkUZZGMBcSMoZcpbowoAE&quot;,
        IF(
            CONTAINS(LOWER(TEXT(Lead_Type__c)), &quot;align&quot;),
            &quot;BZgHVChDZK68fYz6ELk25X&quot;,
            NULL
        )
    )
)**/

TEXT(Lead_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Quote Template Id to use in accordance with the Division of the Opportunity</inlineHelpText>
    <label>Pandadoc Quote Template Id</label>
    <type>Text</type>
</CustomField>