force-app/main/default/objects/Opportunity/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <formula>TEXT( Account.Payment_Terms__c )</formula>
    <label>zPandadoc - Payment Terms - Account</label>
    <type>Text</type>
</CustomField>