force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Delete --&gt; Redundant to Payment Term (Account Lookup)</description>
    <label>zPayment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>