force-app/main/default/objects/Opportunity/fields/Photo_EQ__c.field-meta.xml
<CustomField>
    <fullName>Photo_EQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zEquipment - Photo</label>
    <type>Checkbox</type>
</CustomField>