force-app/main/default/objects/Opportunity/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <description>Enter PO # issued by client.
Not all Opps require a PO # and they are typically used more frequently by larger companies.
PO # Field integrates and displays on Pandadoc Estimates/Invoices as well as on auto-generated QB Invoices
Associated PO $ Amount, add info into &apos;Notes - Accounting&apos; field in Additional Info section</description>
    <inlineHelpText>Enter PO # issued by client.
Not all Opps require a PO # and they are typically used more frequently by larger companies.
PO # Field integrates and displays on Pandadoc Estimates/Invoices as well as on auto-generated QB Invoices
Associated PO $ Amount, add info into &apos;Notes - Accounting&apos; field in Additional Info section</inlineHelpText>
    <label>Invoice - PO #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>