force-app/main/default/objects/Opportunity/fields/PO_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>PO_AMOUNT__c</fullName>
    <description>$ Amount of PO #
PO # issued by Customer has Associated $ Amount attached to the PO #</description>
    <inlineHelpText>$ Amount of PO #
PO # issued by Customer has Associated $ Amount attached to the PO #</inlineHelpText>
    <label>zAmount - PO #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>