force-app/main/default/objects/Opportunity/fields/Post_Production_Method__c.field-meta.xml
<CustomField>
    <fullName>Post_Production_Method__c</fullName>
    <label>zTypeform - Post Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>