force-app/main/default/objects/Opportunity/fields/Price_Per_Image__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Image__c</fullName>
    <description>Formula based on Customer Invoice Amount / Image Count.
Price Per Image is important industry standard which we can use to determine if pricing is within industry standards. Customers request to estimate based on price per image v full amount</description>
    <formula>Amount /  Image_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula based on Customer Invoice Amount / Image Count.
Price Per Image is important industry standard which we can use to determine if pricing is within industry standards. Customers request to estimate based on price per image v full amount</inlineHelpText>
    <label>zAmount - Price Per Image</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>