force-app/main/default/objects/Opportunity/fields/Primary_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Primary_E_mail__c</fullName>
    <formula>PrimaryContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Email (Opp)</label>
    <type>Text</type>
</CustomField>