force-app/main/default/objects/Opportunity/fields/Primary_Quote_Margin__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Margin__c</fullName>
    <formula>IF( SBQQ__PrimaryQuote__r.Margin__c &gt; 0, SBQQ__PrimaryQuote__r.Margin__c,  True_Margin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zMargin - Primary Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>