force-app/main/default/objects/Opportunity/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opp_Primary Contact (PrimaryContact__c) is a lookup field linking an Opportunity to its main Contact. It helps track key decision-makers, improve reporting, and enable automation. Used for CRM insights, sales follow-ups, and potential process automation. Ensure it&apos;s populated for accurate reporting and workflow triggers.</description>
    <label>Primary Contact (Opp)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities-Primary Contact</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>