force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>zProduct Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>