force-app/main/default/objects/Opportunity/fields/Production_Fee__c.field-meta.xml
<CustomField>
    <fullName>Production_Fee__c</fullName>
    <formula>Total_Price__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zProduction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>