force-app/main/default/objects/Opportunity/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <label>zTypeform - Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>