force-app/main/default/objects/Opportunity/fields/Project_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Project_Deadline__c</fullName>
    <label>zTypeform - Deadline</label>
    <type>Date</type>
</CustomField>