force-app/main/default/objects/Opportunity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>zProject Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Description</valueSetName>
    </valueSet>
</CustomField>