force-app/main/default/objects/Opportunity/fields/Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Project_Total__c</fullName>
    <formula>Total_Price__c * 1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zAmount - Project Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>