force-app/main/default/objects/Opportunity/fields/QB_Company__c.field-meta.xml
<CustomField>
    <fullName>QB_Company__c</fullName>
    <description>Specifies which company this opp is for based on Service Type value</description>
    <formula>If(CONTAINS(TEXT(Lead_Type__c),&apos;Palermo&apos;), &apos;Palermo Studio&apos;,
			IF(CONTAINS(TEXT(Lead_Type__c),&apos;Align&apos;), &apos;Align Retouch&apos;,
						IF(CONTAINS(TEXT(Lead_Type__c),&apos;Casablanca&apos;), &apos;Casablanca Films&apos;,
									&apos;Slate Studios&apos;
									)
						)
			)</formula>
    <inlineHelpText>Specifies which company this opp is for based on Service Type value</inlineHelpText>
    <label>QB Company</label>
    <type>Text</type>
</CustomField>