force-app/main/default/objects/Opportunity/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>Used in several reports</description>
    <formula>&quot;Q&quot;+ TEXT(CEILING(MONTH( CloseDate ) / 3 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>