force-app/main/default/objects/Opportunity/fields/RealVal__c.field-meta.xml
<CustomField>
    <fullName>RealVal__c</fullName>
    <formula>IF( Amount  &lt; Project_Total__c,  Project_Total__c ,  Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zMargin - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>