force-app/main/default/objects/Opportunity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zReferred - By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Referred By)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>