force-app/main/default/objects/Opportunity/fields/Referrer_Type__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Type__c</fullName>
    <description>Tracks Types of Referrers of Opps to Slate.
Determines Ideal Referrer and focusing Marketing Efforts on that Referrer Segment to ^amount of referrers</description>
    <inlineHelpText>Tracks Types of Referrers of Opps to Slate.
Determines Ideal Referrer and focusing Marketing Efforts on that Referrer Segment to ^amount of referrers</inlineHelpText>
    <label>zReferred - Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Direct</fullName>
            </value>
            <value>
                <fullName>Brand Founder</fullName>
            </value>
            <value>
                <fullName>Brand Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Creative Director</fullName>
            </value>
            <value>
                <fullName>Digital Agency</fullName>
            </value>
            <value>
                <fullName>Director/DP</fullName>
            </value>
            <value>
                <fullName>Freelance Producer</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Photographer Rep</fullName>
            </value>
            <value>
                <fullName>Production Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>