force-app/main/default/objects/Opportunity/fields/Required_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Required_Deposit__c</fullName>
    <defaultValue>00.70</defaultValue>
    <description>The percentage of the total that will be billed via the initial estimate.</description>
    <label>Required Deposit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>