force-app/main/default/objects/Opportunity/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to Account Level Retainer
Retainers are named by Account</description>
    <inlineHelpText>Lookup Field to Account Level Retainer
Retainers are named by Account</inlineHelpText>
    <label>zRetainer - Account</label>
    <referenceTo>Retainer__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>