force-app/main/default/objects/Opportunity/fields/Retainer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Retainer_End_Date__c</fullName>
    <description>Enter End Date of Retainer.
Start Date + End Date fields assoc. w. Account Retainer</description>
    <inlineHelpText>Enter End Date of Retainer.
Start Date + End Date fields assoc. w. Account Retainer</inlineHelpText>
    <label>zRetainer - End</label>
    <type>Date</type>
</CustomField>