force-app/main/default/objects/Opportunity/fields/Retainer_Master__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if Opp should be included in Account Level Master Retainer</description>
    <inlineHelpText>Check box if Opp should be included in Account Level Master Retainer</inlineHelpText>
    <label>zRetainer - Master</label>
    <type>Checkbox</type>
</CustomField>