force-app/main/default/objects/Opportunity/fields/Retainer_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Quarterly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to Sub-Retainer underneath Main Account Level Retainer. 
Sub-Retainers named by &apos;Account - Season&apos;
Follow existing Retainer Naming Schema Closely</description>
    <inlineHelpText>Lookup Field to Sub-Retainer underneath Main Account Level Retainer. 
Sub-Retainers named by &apos;Account - Season&apos;
Follow existing Retainer Naming Schema Closely</inlineHelpText>
    <label>zRetainer - Season</label>
    <referenceTo>Retainer_Quarterly__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>