force-app/main/default/objects/Opportunity/fields/Retainer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Start_Date__c</fullName>
    <description>Enter Start Date of Retainer.
Start Date and End Date fields assoc. w. Account Level Retainer</description>
    <inlineHelpText>Enter Start Date of Retainer.
Start Date and End Date fields assoc. w. Account Level Retainer</inlineHelpText>
    <label>zRetainer - Start</label>
    <type>Date</type>
</CustomField>